# arkkvm-app

./: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  NOTICE  README.md  THIRD_PARTY_NOTICES  about.hbs  about.toml  build.sh  deny.toml
arkkvm/: Cargo.toml  build.rs
arkkvm/src/: assets.rs  audio.rs  cert.rs  data_channel.rs  jiggler.rs  jsonrpc.rs  lib.rs  main.rs  middleware.rs  ota.rs  proto.rs  remote_mount.rs  session.rs  signaling.rs  state.rs  terminal.rs  time_sync.rs  tls.rs  util.rs  video.rs  web.rs  webrtc.rs  wol.rs  zenoh_bus.rs
arkkvm/src/cloud/: manager.rs  mod.rs  oidc.rs  types.rs  websocket.rs
arkkvm/src/common/: log.rs  mod.rs  panic_handler.rs
arkkvm/src/config/: manager.rs  mod.rs  persistence.rs  types.rs
arkkvm/src/hardware/: atx.rs  audio.rs  block_device.rs  display.rs  fs_fat32.rs  fs_remote.rs  hw.rs  mod.rs  mpi.rs
arkkvm/src/hardware/hdmi/: edid.rs  hdmirx.rs  mod.rs  rk628_hpd.rs  v4l2.rs  venc.rs
arkkvm/src/hardware/native/: jsonrpc.rs  mod.rs  process.rs  socket.rs
arkkvm/src/hardware/usb/: descriptors.rs  gadget.rs  hid.rs  mic.rs  mod.rs  storage.rs
arkkvm/src/module/: mod.rs  rtc_request_params.rs  rtc_response_params.rs
arkkvm/src/network/: mod.rs  settings.rs  ssh.rs  static_ip_config.rs  vlan.rs
arkkvm/src/network/mdns/: config.rs  mod.rs  server.rs  utils.rs
arkkvm/src/plugin/: mod.rs  tailscale.rs
arkkvm/src/services/: audio.rs  gui_pipeline.rs  mod.rs  usb.rs  virtual_mic.rs
assets/images/: netboot.xyz-multiarch.iso
crates/common/: Cargo.toml
crates/common/src/: device.rs  lib.rs
crates/common/src/log/: mod.rs
crates/rockchip_mpi_sys/: Cargo.toml  build.rs  wrapper.h
crates/usb_devices/: Cargo.toml  build.rs
crates/usb_devices/src/: config.rs  error.rs  events.rs  lib.rs  main.rs  manager.rs  test.rs  udc.rs
crates/usb_devices/src/common/: log.rs
crates/usb_devices/src/control/: mod.rs  patch.rs  service.rs  zenoh.rs  zenoh_bus.rs  zenoh_udc.rs
crates/usb_devices/src/devices/: hid_abs.rs  hid_io.rs  hid_kb.rs  mod.rs  uac.rs  ums.rs  ums1.rs
crates/usb_devices/src/system/: configfs.rs  mod.rs  udc_state_watch.rs
examples/: Cargo.toml  path_resolution_demo.rs  webrtc.html
examples/rekvm/: terminal.rs  webrtc.rs
examples/rekvm/hardware/: hw.rs
examples/webrtc/: index.html  webrtc.rs
frontend/: package.json  pnpm-lock.yaml  rsbuild.config.ts  rspack.config.js  tsconfig.json
frontend/src/: App.tsx  autofill-override.css  global.css  index.tsx
frontend/src/components/: login-form.tsx
proto/: usb_devices.proto
shell/: S50sshd  S50usbdevice  S51arkkvmapp
