[workspace]
members = ["arkkvm", "crates/rockchip_mpi_sys", "crates/usb_devices", "crates/common"]
exclude = ["rust"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-2.0-or-later"
repository = "https://github.com/arkkvm/arkkvm-app"

[profile.dev]
opt-level = 0

[profile.release]
# highest optimization level
opt-level = 3
# link-time optimization: thin balances build time; fat is slower but stronger
lto = "thin"
# fewer codegen units for better optimization
codegen-units = 1
# strip debug symbols to reduce binary size
strip = true
incremental = false

[workspace.dependencies]
common = { path = "crates/common" }
rockchip_mpi_sys = { path = "crates/rockchip_mpi_sys" }

tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-appender = "0.2.4"

anyhow = "1.0.102"

tokio = { version = "1.46.1", features = ["full", "macros", "rt-multi-thread"] }
tokio-serial = "5.4.1"
tokio-util = { version = "0.7.16", default-features = false, features = [
  "codec",
] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = [
  "connect",
  "rustls-tls-webpki-roots",
] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

hex = { version = "0.4.3", default-features = false, features = ["alloc"]}
bytes = "1.11.1"
parking_lot = "0.12.5"

rustix = { version = "1.0.8", default-features = false, features = [
  "pty",
  "fs",
  "termios",
  "net",
  "process",
  "event",
] }
regex = { version = "1.11.1", default-features = false }