[package]
name = "arkkvm"
version = "1.0.10132"
edition = "2024"

[lib]
name = "arkkvm"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "arkkvm_app"
path = "src/main.rs"

[features]
env_dev = []
env_unsafe = []

[dependencies]
rockchip_mpi_sys = { path = "../crates/rockchip_mpi_sys" }
anyhow = "1.0.98"
async-channel = "2.5"
dotenvy = "0.15"
rcgen = { version = "0.14.5", features = ["pem", "x509-parser"] }
pem = "3.0"
rust-embed = "8.7.2"
rustls = { version = "0.23.29", default-features = false, features = [
  "ring",
] } # or "aws_lc_rs"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socketioxide = { version = "0.17.2", features = ["extensions", "state"] }
# axum = { version = "0.8.4", features = ["macros"] }
# axum-server = { version = "0.7.2", features = ["tls-rustls"] }
# tower = "0.5.2"
# tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tokio = { version = "1.46.1", features = ["full", "macros", "rt-multi-thread"] }
tokio-serial = "5.4.1"
tokio-util = { version = "0.7.16", default-features = false, features = [
  "codec",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"
file-rotate = "0.8.0"
lazy_static = "1.5.0"
base64 = { version = "0.22.1", default-features = false }
bcrypt = { version = "0.17.0", default-features = false, features = ["std"] }
bytes = "1.11.0"
chrono = { version = "0.4.42", default-features = false, features = ["alloc", "serde"] }
futures = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
hex = { version = "0.4.3", default-features = false }
httpdate = "1.0.3"
if-addrs = "0.14.0"
libc = { version = "0.2.175", default-features = false }
macaddr = { version = "1.0.1", default-features = false }
mdns-sd = { version = "0.17.1", default-features = false }
nbd = "0.3.1"
once_cell = "1.21.3"
parking_lot = "0.12.4"
prometheus = { version = "0.14.0", default-features = false }
regex = { version = "1.11.1", default-features = false }
reqwest = { version = "0.12.23", default-features = false, features = [
  "blocking",
  "rustls-tls-webpki-roots",
  "json",
  "stream",
] }
rustix = { version = "1.0.8", default-features = false, features = [
  "pty",
  "fs",
  "termios",
  "net",
] }
salvo = { version = "0.84.0", features = [
  "oapi",
  "serve-static",
  "tower-compat",
  "websocket",
] }
time = { version = "0.3.41", default-features = false, features = ["macros"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = [
  "connect",
  "rustls-tls-webpki-roots",
] }
uuid = { version = "1.17.0", default-features = false, features = ["v4"] }
webrtc = { git = "http://git.ensurebit.net/arkkvm/WebRTC.git", rev = "dc11f4e388", features = [] }

id_token_verifier = { git = "https://github.com/foxxcn/id_token_verifier.git", tag = "rekvm", features = [
  "tracing",
] }
fatfs = "0.3.6"
zenoh = { version = "1.5.1", default-features = false, features = [
  "transport_unixsock-stream",
] }
opusic-c = { version = "1.5.4", default-features = false }
rand = "0.9.2"
envy = "0.4"
nix = "0.30.1"
mac_address = "1.1"
ntp = "0.5"
atomic_float = "1.0"
triple_buffer = "7.0"
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["sha2"] }

[dev-dependencies]
tempfile = "3.20.0"
