[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
dotenvy = "0.15"
mime_guess = "2.0.5"
rcgen = { version = "0.14.3", features = ["pem"] }
rust-embed = "8.7.2"
rustls = { version = "0.23.29", features = ["ring"] }                     # or "aws_lc_rs"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socketioxide = { version = "0.17.2", features = ["extensions", "state"] }
tokio = { version = "1.46.1", features = ["full", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

base64 = "0.22.1"
arkkvm = { path = "../arkkvm" }
tokio-util = { version = "0.7.16", default-features = false }
uuid = { version = "1.0", features = ["v4"] }
webrtc = { version = "0.13.0", features = [] }

[[example]]
name = "webrtc"
path = "webrtc/webrtc.rs"
bench = false

[[example]]
name = "arkkvm_webrtc"
path = "arkkvm/webrtc.rs"
bench = false

[[example]]
name = "hw"
path = "arkkvm/hardware/hw.rs"
bench = false

[[example]]
name = "terminal"
path = "arkkvm/terminal.rs"
bench = false
