[package]
name = "arkkvm_usb"
version = "0.2.26061893"
edition = "2024"

[lib]
name = "arkkvm_usb"
path = "src/lib.rs"

[[bin]]
name = "arkkvm_usb"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
rockchip_mpi_sys = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

anyhow = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

rustix = { workspace = true }

thiserror = "2.0"
usb-gadget = "1.1"
async-trait = "0.1"
inotify = "0.11"
once_cell = "1.21.3"
zenoh = { version = "1.5.1", default-features = false, features = [
  "transport_unixsock-stream",
] }
prost = "0.13.5"

async-channel = "2.5"
lazy_static = "1.5.0"

[build-dependencies]
prost-build  = "0.13.5"
protoc-bin-vendored = "3.1.0"
